* Fixed front page support for browsers other than Google Chrome.  * Front page now has a footer section.  * Graph page now uses same jquery version as front page.  * Graph page now uses same layout as front page.  * Graph now only displays eight x-axis labels and eleven y-axis labels so labels never overlap each other.

--- a/trunk/common.css
+++ b/trunk/common.css
@@ -1,3 +1,21 @@
+.footer {
+	width: 780px;
+	background: #D9B7A4;
+	padding: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	font-size: 50%;
+}
+
+.body {
+	width: 780px;
+	background: #B8D1CA;
+	padding: 10px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .buttonset {
 	text-align: center;
 }
